finally commit with new API
Fix problem with rest-api;

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -11,3 +11,10 @@
 .isActive {
     color: orangered
 }
+
+.head {
+    padding: 16px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 2px 5px 0;
+  }
